--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^2.0.0",
+    "jquery": "^3.3.1",
+    "smartmenus": "^1.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "sass-loader": "^7.0.1",
